--- a/components/notebook-controller/config/crd/bases/kubeflow.org_notebooks.yaml
+++ b/components/notebook-controller/config/crd/bases/kubeflow.org_notebooks.yaml
@@ -36,6 +36,26 @@ spec:
         spec:
           description: NotebookSpec defines the desired state of Notebook
           properties:
+            scalePVC:
+              description: If specified, controller will scale PVC if threshold is
+                met
+              properties:
+                increment:
+                  anyOf:
+                  - type: integer
+                  - type: string
+                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                  x-kubernetes-int-or-string: true
+                threshold:
+                  anyOf:
+                  - type: integer
+                  - type: string
+                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                  x-kubernetes-int-or-string: true
+              required:
+              - increment
+              - threshold
+              type: object
             template:
               description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
                 Important: Run "make" to regenerate code after modifying this file'
