--- a/components/notebook-controller/loadtest/jupyter_test.yaml
+++ b/components/notebook-controller/loadtest/jupyter_test.yaml
@@ -4,7 +4,7 @@ metadata:
   name: jupyter-test
 spec:
   scalePVC:
-    threshold: 500Mi
+    threshold: 50  # percentage
     increment: 1000Mi
   template:
     spec:
