--- a/components/notebook-controller/loadtest/jupyter_pvc.yaml
+++ b/components/notebook-controller/loadtest/jupyter_pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: test-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
+      storage: 100Mi
