--- a/components/notebook-controller/loadtest/jupyter_pvc.yaml
+++ b/components/notebook-controller/loadtest/jupyter_pvc.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: test-pvc
+
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
